--- a/app.css
+++ b/app.css
@@ -1,3 +1,21 @@
+:root {
+    --myBlue:#0c0d45;
+  }
+
 body{
     background: #92c7f0;
+    font-family: 'Nunito', sans-serif;
+}
+#mainNavbar {
+    font-size: 1.5rem;
+    font-weight: 100;
+}
+#mainNavbar .nav-link{
+    color: white;
+}
+#mainNavbar .nav-link:hover{
+    color:var(--myBlue);
+}
+#mainNavbar .navbar-brand{
+    color:var(--myBlue);
 }
