--- a/app.css
+++ b/app.css
@@ -19,3 +19,16 @@ body{
 #mainNavbar .navbar-brand{
     color:var(--myBlue);
 }
+#headingGroup i{
+    color: var(--myBlue);
+}
+#headingGroup h1{
+   font-weight: 100;
+   font-size: 2.5rem;
+}
+@media(max-width:700px){
+    #headingGroup h1{
+        font-weight: 100;
+        font-size: 2rem;
+     }
+}
