--- a/app.css
+++ b/app.css
@@ -6,6 +6,15 @@ body{
     background: #92c7f0;
     font-family: 'Nunito', sans-serif;
 }
+.blurb h2{
+    color: var(--myBlue);
+    font-weight: 100;
+}
+
+.blurb p{
+    color: #0000cc;
+    font-weight: 100;
+}
 #mainNavbar {
     font-size: 1.5rem;
     font-weight: 100;
@@ -26,6 +35,7 @@ body{
    font-weight: 100;
    font-size: 2.5rem;
 }
+
 @media(max-width:700px){
     #headingGroup h1{
         font-weight: 100;
