--- a/app.css
+++ b/app.css
@@ -35,7 +35,15 @@ body{
    font-weight: 100;
    font-size: 2.5rem;
 }
-
+li{
+    text-shadow: -1px -1px 1px #6699ff, 2px 2px 7px #363636;
+}
+@media(min-width:768px){
+.navbar.scrolled{
+    background:#6699ff;
+    transition: background 500ms;
+}
+}
 @media(max-width:700px){
     #headingGroup h1{
         font-weight: 100;
